Page MenuHome GnuPG

GpgME::Context::engineInfo() always returns engine info of first engine
Closed, ResolvedPublic

Description

GpgME::Context::engineInfo() returns an EngineInfo object created for gpgme_ctx_get_engine_info(d->ctx) which does not return a pointer to the engine info corresponding to the protocol used for d->ctx but a pointer to the first entry of the linked list of engine infos.

As collateral damage, Context::setEngineFileName() overwrites the home directory entry of the context's engine with the home directory of the first engine and vice versa for Context::setEngineHomeDirectory().

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.